// Vitest Snapshot v1

exports[`DateTimePicker > DateTimePicker baseVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-cell t-cell--middle t-cell--bordered"
  >
    <div
      class="t-cell__left"
    >
      <!--v-if-->
      <!--v-if-->
    </div>
    <div
      class="t-cell__title"
    >
      选择日期(年月日)
      <!--v-if-->
      <!--v-if-->
    </div>
    <div
      class="t-cell__note"
    >
      年 月 日
    </div>
    <!--v-if-->
  </div>
  <!--teleport start-->
  <div
    class="t-popup"
  >
    <transition-stub
      appear="false"
      css="true"
      name="fade"
      persisted="false"
    >
      <transition-stub
        appear="false"
        css="true"
        name="t-overlay"
        persisted="true"
      >
        <div
          class="t-overlay"
          style="z-index: 1000; transition-duration: 300ms; display: none;"
        >
          
          
        </div>
      </transition-stub>
    </transition-stub>
    <transition-stub
      appear="false"
      css="true"
      name="slide-bottom"
      persisted="true"
    >
      <div
        class="t-popup--content t-popup--content-bottom"
        style="display: none;"
      >
        
        <div
          class="t-date-time-picker"
        >
          <div
            class="t-picker"
          >
            <div
              class="t-picker__toolbar"
            >
              <div
                class="t-picker__cancel"
              >
                取消
              </div>
              <div
                class="t-picker__title"
              >
                选择日期
              </div>
              <div
                class="t-picker__confirm"
              >
                确定
              </div>
            </div>
            <!---->
            <div
              class="t-picker__main"
            >
              
              <div
                class="t-picker-item__group"
              >
                <ul
                  class="t-picker-item"
                  style="transform: translate3d(0, -160px, 0);"
                >
                  
                  <li
                    class="t-picker-item__item"
                  >
                    2015 年
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    2016 年
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    2017 年
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    2018 年
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    2019 年
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    2020 年
                  </li>
                  <li
                    class="t-picker-item__item t-picker-item__item--selected"
                  >
                    2021 年
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    2022 年
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    2023 年
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    2024 年
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    2025 年
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    2026 年
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    2027 年
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    2028 年
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    2029 年
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    2030 年
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    2031 年
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    2032 年
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    2033 年
                  </li>
                  
                </ul>
              </div>
              <div
                class="t-picker-item__group"
              >
                <ul
                  class="t-picker-item"
                  style="transform: translate3d(0, -360px, 0);"
                >
                  
                  <li
                    class="t-picker-item__item"
                  >
                    1 月
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    2 月
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    3 月
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    4 月
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    5 月
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    6 月
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    7 月
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    8 月
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    9 月
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    10 月
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    11 月
                  </li>
                  <li
                    class="t-picker-item__item t-picker-item__item--selected"
                  >
                    12 月
                  </li>
                  
                </ul>
              </div>
              <div
                class="t-picker-item__group"
              >
                <ul
                  class="t-picker-item"
                  style="transform: translate3d(0, -800px, 0);"
                >
                  
                  <li
                    class="t-picker-item__item"
                  >
                    1 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    2 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    3 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    4 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    5 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    6 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    7 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    8 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    9 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    10 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    11 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    12 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    13 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    14 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    15 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    16 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    17 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    18 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    19 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    20 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    21 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    22 日
                  </li>
                  <li
                    class="t-picker-item__item t-picker-item__item--selected"
                  >
                    23 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    24 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    25 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    26 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    27 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    28 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    29 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    30 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    31 日
                  </li>
                  
                </ul>
              </div>
              
              <div
                class="t-picker__mask t-picker__mask--top"
              />
              <div
                class="t-picker__mask t-picker__mask--bottom"
              />
              <div
                class="t-picker__indicator"
              />
            </div>
          </div>
        </div>
        
      </div>
    </transition-stub>
  </div>
  <!--teleport end-->
  
</div>
`;

exports[`DateTimePicker > DateTimePicker customRangeVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-cell t-cell--middle t-cell--bordered"
  >
    <div
      class="t-cell__left"
    >
      <!--v-if-->
      <!--v-if-->
    </div>
    <div
      class="t-cell__title"
    >
      选择日期
      <!--v-if-->
      <!--v-if-->
    </div>
    <div
      class="t-cell__note"
    >
      年 月 日
    </div>
    <!--v-if-->
  </div>
  <!--teleport start-->
  <div
    class="t-popup"
  >
    <transition-stub
      appear="false"
      css="true"
      name="fade"
      persisted="false"
    >
      <transition-stub
        appear="false"
        css="true"
        name="t-overlay"
        persisted="true"
      >
        <div
          class="t-overlay"
          style="z-index: 1000; transition-duration: 300ms; display: none;"
        >
          
          
        </div>
      </transition-stub>
    </transition-stub>
    <transition-stub
      appear="false"
      css="true"
      name="slide-bottom"
      persisted="true"
    >
      <div
        class="t-popup--content t-popup--content-bottom"
        style="display: none;"
      >
        
        <div
          class="t-date-time-picker"
        >
          <div
            class="t-picker"
          >
            <div
              class="t-picker__toolbar"
            >
              <div
                class="t-picker__cancel"
              >
                取消
              </div>
              <div
                class="t-picker__title"
              >
                选择日期
              </div>
              <div
                class="t-picker__confirm"
              >
                确定
              </div>
            </div>
            <!---->
            <div
              class="t-picker__main"
            >
              
              <div
                class="t-picker-item__group"
              >
                <ul
                  class="t-picker-item"
                  style="transform: translate3d(0, 40px, 0);"
                >
                  
                  <li
                    class="t-picker-item__item"
                  >
                    2020 年
                  </li>
                  <li
                    class="t-picker-item__item t-picker-item__item--selected"
                  >
                    2021 年
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    2022 年
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    2023 年
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    2024 年
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    2025 年
                  </li>
                  
                </ul>
              </div>
              <div
                class="t-picker-item__group"
              >
                <ul
                  class="t-picker-item"
                  style="transform: translate3d(0, -360px, 0);"
                >
                  
                  <li
                    class="t-picker-item__item"
                  >
                    1 月
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    2 月
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    3 月
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    4 月
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    5 月
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    6 月
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    7 月
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    8 月
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    9 月
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    10 月
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    11 月
                  </li>
                  <li
                    class="t-picker-item__item t-picker-item__item--selected"
                  >
                    12 月
                  </li>
                  
                </ul>
              </div>
              <div
                class="t-picker-item__group"
              >
                <ul
                  class="t-picker-item"
                  style="transform: translate3d(0, -800px, 0);"
                >
                  
                  <li
                    class="t-picker-item__item"
                  >
                    1 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    2 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    3 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    4 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    5 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    6 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    7 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    8 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    9 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    10 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    11 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    12 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    13 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    14 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    15 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    16 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    17 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    18 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    19 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    20 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    21 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    22 日
                  </li>
                  <li
                    class="t-picker-item__item t-picker-item__item--selected"
                  >
                    23 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    24 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    25 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    26 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    27 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    28 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    29 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    30 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    31 日
                  </li>
                  
                </ul>
              </div>
              
              <div
                class="t-picker__mask t-picker__mask--top"
              />
              <div
                class="t-picker__mask t-picker__mask--bottom"
              />
              <div
                class="t-picker__indicator"
              />
            </div>
          </div>
        </div>
        
      </div>
    </transition-stub>
  </div>
  <!--teleport end-->
  
</div>
`;

exports[`DateTimePicker > DateTimePicker fullVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-cell t-cell--middle t-cell--bordered"
  >
    <div
      class="t-cell__left"
    >
      <!--v-if-->
      <!--v-if-->
    </div>
    <div
      class="t-cell__title"
    >
      选择日期(年月日时分)
      <!--v-if-->
      <!--v-if-->
    </div>
    <div
      class="t-cell__note"
    >
      2020-08-10 12:50:00
    </div>
    <!--v-if-->
  </div>
  <!--teleport start-->
  <div
    class="t-popup"
  >
    <transition-stub
      appear="false"
      css="true"
      name="fade"
      persisted="false"
    >
      <transition-stub
        appear="false"
        css="true"
        name="t-overlay"
        persisted="true"
      >
        <div
          class="t-overlay"
          style="z-index: 1000; transition-duration: 300ms; display: none;"
        >
          
          
        </div>
      </transition-stub>
    </transition-stub>
    <transition-stub
      appear="false"
      css="true"
      name="slide-bottom"
      persisted="true"
    >
      <div
        class="t-popup--content t-popup--content-bottom"
        style="display: none;"
      >
        
        <div
          class="t-date-time-picker"
        >
          <div
            class="t-picker"
          >
            <div
              class="t-picker__toolbar"
            >
              <div
                class="t-picker__cancel"
              >
                取消
              </div>
              <div
                class="t-picker__title"
              >
                选择日期时间
              </div>
              <div
                class="t-picker__confirm"
              >
                确定
              </div>
            </div>
            <!---->
            <div
              class="t-picker__main"
            >
              
              <div
                class="t-picker-item__group"
              >
                <ul
                  class="t-picker-item"
                  style="transform: translate3d(0, -200px, 0);"
                >
                  
                  <li
                    class="t-picker-item__item"
                  >
                    2013 年
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    2014 年
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    2015 年
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    2016 年
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    2017 年
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    2018 年
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    2019 年
                  </li>
                  <li
                    class="t-picker-item__item t-picker-item__item--selected"
                  >
                    2020 年
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    2021 年
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    2022 年
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    2023 年
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    2024 年
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    2025 年
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    2026 年
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    2027 年
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    2028 年
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    2029 年
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    2030 年
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    2031 年
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    2032 年
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    2033 年
                  </li>
                  
                </ul>
              </div>
              <div
                class="t-picker-item__group"
              >
                <ul
                  class="t-picker-item"
                  style="transform: translate3d(0, -200px, 0);"
                >
                  
                  <li
                    class="t-picker-item__item"
                  >
                    1 月
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    2 月
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    3 月
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    4 月
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    5 月
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    6 月
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    7 月
                  </li>
                  <li
                    class="t-picker-item__item t-picker-item__item--selected"
                  >
                    8 月
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    9 月
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    10 月
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    11 月
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    12 月
                  </li>
                  
                </ul>
              </div>
              <div
                class="t-picker-item__group"
              >
                <ul
                  class="t-picker-item"
                  style="transform: translate3d(0, -280px, 0);"
                >
                  
                  <li
                    class="t-picker-item__item"
                  >
                    1 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    2 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    3 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    4 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    5 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    6 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    7 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    8 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    9 日
                  </li>
                  <li
                    class="t-picker-item__item t-picker-item__item--selected"
                  >
                    10 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    11 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    12 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    13 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    14 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    15 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    16 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    17 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    18 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    19 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    20 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    21 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    22 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    23 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    24 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    25 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    26 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    27 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    28 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    29 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    30 日
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    31 日
                  </li>
                  
                </ul>
              </div>
              
              <div
                class="t-picker__mask t-picker__mask--top"
              />
              <div
                class="t-picker__mask t-picker__mask--bottom"
              />
              <div
                class="t-picker__indicator"
              />
            </div>
          </div>
        </div>
        
      </div>
    </transition-stub>
  </div>
  <!--teleport end-->
  
</div>
`;

exports[`DateTimePicker > DateTimePicker mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
>
  <h1
    class="title"
  >
    DateTimePicker 时间选择器
  </h1>
  <p
    class="summary"
  >
    用于选择一个时间点或者一个时间段
  </p>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        基本用法
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-cell t-cell--middle t-cell--bordered"
      >
        <div
          class="t-cell__left"
        >
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__title"
        >
          选择日期(年月日)
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__note"
        >
          年 月 日
        </div>
        <!--v-if-->
      </div>
      <!--teleport start-->
      <div
        class="t-popup"
      >
        <transition-stub
          appear="false"
          css="true"
          name="fade"
          persisted="false"
        >
          <transition-stub
            appear="false"
            css="true"
            name="t-overlay"
            persisted="true"
          >
            <div
              class="t-overlay"
              style="z-index: 1000; transition-duration: 300ms; display: none;"
            >
              
              
            </div>
          </transition-stub>
        </transition-stub>
        <transition-stub
          appear="false"
          css="true"
          name="slide-bottom"
          persisted="true"
        >
          <div
            class="t-popup--content t-popup--content-bottom"
            style="display: none;"
          >
            
            <div
              class="t-date-time-picker"
            >
              <div
                class="t-picker"
              >
                <div
                  class="t-picker__toolbar"
                >
                  <div
                    class="t-picker__cancel"
                  >
                    取消
                  </div>
                  <div
                    class="t-picker__title"
                  >
                    选择日期
                  </div>
                  <div
                    class="t-picker__confirm"
                  >
                    确定
                  </div>
                </div>
                <!---->
                <div
                  class="t-picker__main"
                >
                  
                  <div
                    class="t-picker-item__group"
                  >
                    <ul
                      class="t-picker-item"
                      style="transform: translate3d(0, -160px, 0);"
                    >
                      
                      <li
                        class="t-picker-item__item"
                      >
                        2015 年
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        2016 年
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        2017 年
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        2018 年
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        2019 年
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        2020 年
                      </li>
                      <li
                        class="t-picker-item__item t-picker-item__item--selected"
                      >
                        2021 年
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        2022 年
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        2023 年
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        2024 年
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        2025 年
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        2026 年
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        2027 年
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        2028 年
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        2029 年
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        2030 年
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        2031 年
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        2032 年
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        2033 年
                      </li>
                      
                    </ul>
                  </div>
                  <div
                    class="t-picker-item__group"
                  >
                    <ul
                      class="t-picker-item"
                      style="transform: translate3d(0, -360px, 0);"
                    >
                      
                      <li
                        class="t-picker-item__item"
                      >
                        1 月
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        2 月
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        3 月
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        4 月
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        5 月
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        6 月
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        7 月
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        8 月
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        9 月
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        10 月
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        11 月
                      </li>
                      <li
                        class="t-picker-item__item t-picker-item__item--selected"
                      >
                        12 月
                      </li>
                      
                    </ul>
                  </div>
                  <div
                    class="t-picker-item__group"
                  >
                    <ul
                      class="t-picker-item"
                      style="transform: translate3d(0, -800px, 0);"
                    >
                      
                      <li
                        class="t-picker-item__item"
                      >
                        1 日
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        2 日
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        3 日
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        4 日
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        5 日
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        6 日
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        7 日
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        8 日
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        9 日
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        10 日
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        11 日
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        12 日
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        13 日
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        14 日
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        15 日
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        16 日
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        17 日
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        18 日
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        19 日
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        20 日
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        21 日
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        22 日
                      </li>
                      <li
                        class="t-picker-item__item t-picker-item__item--selected"
                      >
                        23 日
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        24 日
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        25 日
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        26 日
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        27 日
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        28 日
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        29 日
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        30 日
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        31 日
                      </li>
                      
                    </ul>
                  </div>
                  
                  <div
                    class="t-picker__mask t-picker__mask--top"
                  />
                  <div
                    class="t-picker__mask t-picker__mask--bottom"
                  />
                  <div
                    class="t-picker__indicator"
                  />
                </div>
              </div>
            </div>
            
          </div>
        </transition-stub>
      </div>
      <!--teleport end-->
      
      
      <div
        class="t-cell t-cell--middle t-cell--bordered"
      >
        <div
          class="t-cell__left"
        >
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__title"
        >
          选择日期(年月)
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__note"
        >
          年 月
        </div>
        <!--v-if-->
      </div>
      <!--teleport start-->
      <div
        class="t-popup"
      >
        <transition-stub
          appear="false"
          css="true"
          name="fade"
          persisted="false"
        >
          <transition-stub
            appear="false"
            css="true"
            name="t-overlay"
            persisted="true"
          >
            <div
              class="t-overlay"
              style="z-index: 1000; transition-duration: 300ms; display: none;"
            >
              
              
            </div>
          </transition-stub>
        </transition-stub>
        <transition-stub
          appear="false"
          css="true"
          name="slide-bottom"
          persisted="true"
        >
          <div
            class="t-popup--content t-popup--content-bottom"
            style="display: none;"
          >
            
            <div
              class="t-date-time-picker"
            >
              <div
                class="t-picker"
              >
                <div
                  class="t-picker__toolbar"
                >
                  <div
                    class="t-picker__cancel"
                  >
                    取消
                  </div>
                  <div
                    class="t-picker__title"
                  >
                    选择日期
                  </div>
                  <div
                    class="t-picker__confirm"
                  >
                    确定
                  </div>
                </div>
                <!---->
                <div
                  class="t-picker__main"
                >
                  
                  <div
                    class="t-picker-item__group"
                  >
                    <ul
                      class="t-picker-item"
                      style="transform: translate3d(0, -240px, 0);"
                    >
                      
                      <li
                        class="t-picker-item__item"
                      >
                        2013 年
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        2014 年
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        2015 年
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        2016 年
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        2017 年
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        2018 年
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        2019 年
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        2020 年
                      </li>
                      <li
                        class="t-picker-item__item t-picker-item__item--selected"
                      >
                        2021 年
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        2022 年
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        2023 年
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        2024 年
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        2025 年
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        2026 年
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        2027 年
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        2028 年
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        2029 年
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        2030 年
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        2031 年
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        2032 年
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        2033 年
                      </li>
                      
                    </ul>
                  </div>
                  <div
                    class="t-picker-item__group"
                  >
                    <ul
                      class="t-picker-item"
                      style="transform: translate3d(0, -240px, 0);"
                    >
                      
                      <li
                        class="t-picker-item__item"
                      >
                        1 月
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        2 月
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        3 月
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        4 月
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        5 月
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        6 月
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        7 月
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        8 月
                      </li>
                      <li
                        class="t-picker-item__item t-picker-item__item--selected"
                      >
                        9 月
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        10 月
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        11 月
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        12 月
                      </li>
                      
                    </ul>
                  </div>
                  
                  <div
                    class="t-picker__mask t-picker__mask--top"
                  />
                  <div
                    class="t-picker__mask t-picker__mask--bottom"
                  />
                  <div
                    class="t-picker__indicator"
                  />
                </div>
              </div>
            </div>
            
          </div>
        </transition-stub>
      </div>
      <!--teleport end-->
      
      
      <div
        class="t-cell t-cell--middle t-cell--bordered"
      >
        <div
          class="t-cell__left"
        >
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__title"
        >
          选择日期(时分)
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__note"
        >
          时 分
        </div>
        <!--v-if-->
      </div>
      <!--teleport start-->
      <div
        class="t-popup"
      >
        <transition-stub
          appear="false"
          css="true"
          name="fade"
          persisted="false"
        >
          <transition-stub
            appear="false"
            css="true"
            name="t-overlay"
            persisted="true"
          >
            <div
              class="t-overlay"
              style="z-index: 1000; transition-duration: 300ms; display: none;"
            >
              
              
            </div>
          </transition-stub>
        </transition-stub>
        <transition-stub
          appear="false"
          css="true"
          name="slide-bottom"
          persisted="true"
        >
          <div
            class="t-popup--content t-popup--content-bottom"
            style="display: none;"
          >
            
            <div
              class="t-date-time-picker"
            >
              <div
                class="t-picker"
              >
                <div
                  class="t-picker__toolbar"
                >
                  <div
                    class="t-picker__cancel"
                  >
                    取消
                  </div>
                  <div
                    class="t-picker__title"
                  >
                    选择日期
                  </div>
                  <div
                    class="t-picker__confirm"
                  >
                    确定
                  </div>
                </div>
                <!---->
                <div
                  class="t-picker__main"
                >
                  
                  
                  <div
                    class="t-picker__mask t-picker__mask--top"
                  />
                  <div
                    class="t-picker__mask t-picker__mask--bottom"
                  />
                  <div
                    class="t-picker__indicator"
                  />
                </div>
              </div>
            </div>
            
          </div>
        </transition-stub>
      </div>
      <!--teleport end-->
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        02 自定义
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        自定义选择范围
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-cell t-cell--middle t-cell--bordered"
      >
        <div
          class="t-cell__left"
        >
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__title"
        >
          选择日期
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__note"
        >
          年 月 日
        </div>
        <!--v-if-->
      </div>
      <!--teleport start-->
      <div
        class="t-popup"
      >
        <transition-stub
          appear="false"
          css="true"
          name="fade"
          persisted="false"
        >
          <transition-stub
            appear="false"
            css="true"
            name="t-overlay"
            persisted="true"
          >
            <div
              class="t-overlay"
              style="z-index: 1000; transition-duration: 300ms; display: none;"
            >
              
              
            </div>
          </transition-stub>
        </transition-stub>
        <transition-stub
          appear="false"
          css="true"
          name="slide-bottom"
          persisted="true"
        >
          <div
            class="t-popup--content t-popup--content-bottom"
            style="display: none;"
          >
            
            <div
              class="t-date-time-picker"
            >
              <div
                class="t-picker"
              >
                <div
                  class="t-picker__toolbar"
                >
                  <div
                    class="t-picker__cancel"
                  >
                    取消
                  </div>
                  <div
                    class="t-picker__title"
                  >
                    选择日期
                  </div>
                  <div
                    class="t-picker__confirm"
                  >
                    确定
                  </div>
                </div>
                <!---->
                <div
                  class="t-picker__main"
                >
                  
                  <div
                    class="t-picker-item__group"
                  >
                    <ul
                      class="t-picker-item"
                      style="transform: translate3d(0, 40px, 0);"
                    >
                      
                      <li
                        class="t-picker-item__item"
                      >
                        2020 年
                      </li>
                      <li
                        class="t-picker-item__item t-picker-item__item--selected"
                      >
                        2021 年
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        2022 年
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        2023 年
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        2024 年
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        2025 年
                      </li>
                      
                    </ul>
                  </div>
                  <div
                    class="t-picker-item__group"
                  >
                    <ul
                      class="t-picker-item"
                      style="transform: translate3d(0, -360px, 0);"
                    >
                      
                      <li
                        class="t-picker-item__item"
                      >
                        1 月
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        2 月
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        3 月
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        4 月
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        5 月
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        6 月
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        7 月
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        8 月
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        9 月
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        10 月
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        11 月
                      </li>
                      <li
                        class="t-picker-item__item t-picker-item__item--selected"
                      >
                        12 月
                      </li>
                      
                    </ul>
                  </div>
                  <div
                    class="t-picker-item__group"
                  >
                    <ul
                      class="t-picker-item"
                      style="transform: translate3d(0, -800px, 0);"
                    >
                      
                      <li
                        class="t-picker-item__item"
                      >
                        1 日
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        2 日
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        3 日
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        4 日
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        5 日
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        6 日
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        7 日
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        8 日
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        9 日
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        10 日
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        11 日
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        12 日
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        13 日
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        14 日
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        15 日
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        16 日
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        17 日
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        18 日
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        19 日
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        20 日
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        21 日
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        22 日
                      </li>
                      <li
                        class="t-picker-item__item t-picker-item__item--selected"
                      >
                        23 日
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        24 日
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        25 日
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        26 日
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        27 日
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        28 日
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        29 日
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        30 日
                      </li>
                      <li
                        class="t-picker-item__item"
                      >
                        31 日
                      </li>
                      
                    </ul>
                  </div>
                  
                  <div
                    class="t-picker__mask t-picker__mask--top"
                  />
                  <div
                    class="t-picker__mask t-picker__mask--bottom"
                  />
                  <div
                    class="t-picker__indicator"
                  />
                </div>
              </div>
            </div>
            
          </div>
        </transition-stub>
      </div>
      <!--teleport end-->
      
      
    </div>
  </div>
</div>
`;

exports[`DateTimePicker > DateTimePicker timeVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-cell t-cell--middle t-cell--bordered"
  >
    <div
      class="t-cell__left"
    >
      <!--v-if-->
      <!--v-if-->
    </div>
    <div
      class="t-cell__title"
    >
      选择日期(时分)
      <!--v-if-->
      <!--v-if-->
    </div>
    <div
      class="t-cell__note"
    >
      时 分
    </div>
    <!--v-if-->
  </div>
  <!--teleport start-->
  <div
    class="t-popup"
  >
    <transition-stub
      appear="false"
      css="true"
      name="fade"
      persisted="false"
    >
      <transition-stub
        appear="false"
        css="true"
        name="t-overlay"
        persisted="true"
      >
        <div
          class="t-overlay"
          style="z-index: 1000; transition-duration: 300ms; display: none;"
        >
          
          
        </div>
      </transition-stub>
    </transition-stub>
    <transition-stub
      appear="false"
      css="true"
      name="slide-bottom"
      persisted="true"
    >
      <div
        class="t-popup--content t-popup--content-bottom"
        style="display: none;"
      >
        
        <div
          class="t-date-time-picker"
        >
          <div
            class="t-picker"
          >
            <div
              class="t-picker__toolbar"
            >
              <div
                class="t-picker__cancel"
              >
                取消
              </div>
              <div
                class="t-picker__title"
              >
                选择日期
              </div>
              <div
                class="t-picker__confirm"
              >
                确定
              </div>
            </div>
            <!---->
            <div
              class="t-picker__main"
            >
              
              
              <div
                class="t-picker__mask t-picker__mask--top"
              />
              <div
                class="t-picker__mask t-picker__mask--bottom"
              />
              <div
                class="t-picker__indicator"
              />
            </div>
          </div>
        </div>
        
      </div>
    </transition-stub>
  </div>
  <!--teleport end-->
  
</div>
`;

exports[`DateTimePicker > DateTimePicker yearMonthVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-cell t-cell--middle t-cell--bordered"
  >
    <div
      class="t-cell__left"
    >
      <!--v-if-->
      <!--v-if-->
    </div>
    <div
      class="t-cell__title"
    >
      选择日期(年月)
      <!--v-if-->
      <!--v-if-->
    </div>
    <div
      class="t-cell__note"
    >
      年 月
    </div>
    <!--v-if-->
  </div>
  <!--teleport start-->
  <div
    class="t-popup"
  >
    <transition-stub
      appear="false"
      css="true"
      name="fade"
      persisted="false"
    >
      <transition-stub
        appear="false"
        css="true"
        name="t-overlay"
        persisted="true"
      >
        <div
          class="t-overlay"
          style="z-index: 1000; transition-duration: 300ms; display: none;"
        >
          
          
        </div>
      </transition-stub>
    </transition-stub>
    <transition-stub
      appear="false"
      css="true"
      name="slide-bottom"
      persisted="true"
    >
      <div
        class="t-popup--content t-popup--content-bottom"
        style="display: none;"
      >
        
        <div
          class="t-date-time-picker"
        >
          <div
            class="t-picker"
          >
            <div
              class="t-picker__toolbar"
            >
              <div
                class="t-picker__cancel"
              >
                取消
              </div>
              <div
                class="t-picker__title"
              >
                选择日期
              </div>
              <div
                class="t-picker__confirm"
              >
                确定
              </div>
            </div>
            <!---->
            <div
              class="t-picker__main"
            >
              
              <div
                class="t-picker-item__group"
              >
                <ul
                  class="t-picker-item"
                  style="transform: translate3d(0, -240px, 0);"
                >
                  
                  <li
                    class="t-picker-item__item"
                  >
                    2013 年
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    2014 年
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    2015 年
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    2016 年
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    2017 年
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    2018 年
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    2019 年
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    2020 年
                  </li>
                  <li
                    class="t-picker-item__item t-picker-item__item--selected"
                  >
                    2021 年
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    2022 年
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    2023 年
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    2024 年
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    2025 年
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    2026 年
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    2027 年
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    2028 年
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    2029 年
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    2030 年
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    2031 年
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    2032 年
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    2033 年
                  </li>
                  
                </ul>
              </div>
              <div
                class="t-picker-item__group"
              >
                <ul
                  class="t-picker-item"
                  style="transform: translate3d(0, -240px, 0);"
                >
                  
                  <li
                    class="t-picker-item__item"
                  >
                    1 月
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    2 月
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    3 月
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    4 月
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    5 月
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    6 月
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    7 月
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    8 月
                  </li>
                  <li
                    class="t-picker-item__item t-picker-item__item--selected"
                  >
                    9 月
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    10 月
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    11 月
                  </li>
                  <li
                    class="t-picker-item__item"
                  >
                    12 月
                  </li>
                  
                </ul>
              </div>
              
              <div
                class="t-picker__mask t-picker__mask--top"
              />
              <div
                class="t-picker__mask t-picker__mask--bottom"
              />
              <div
                class="t-picker__indicator"
              />
            </div>
          </div>
        </div>
        
      </div>
    </transition-stub>
  </div>
  <!--teleport end-->
  
</div>
`;
